@@ -1,5 +1,9 @@
-2020-07-23 Shahzad Muzaffar  <@smuzaffar>
-	V05-11-00: Cleanup build rules so that they can be shre with SCRAM V3
+2020-07-30 Shahzad Muzaffar  <@smuzaffar>
+	V05-10-29: Drop createSymlink.pl in favor of createSymlink.sh
+2020-07-27 Shahzad Muzaffar  <@smuzaffar>
+	V05-10-27: Added findDependency perl version back for SCRAM V2 based
+	releases.
+	V05-10-28: Set execution permission for findDependency
 2020-07-09 Shahzad Muzaffar  <@smuzaffar>
 	V05-10-23,V05-10-24: Added back projectAreaRename.pl
 	V05-10-25: Use projectAreaRename (i.e. without ext)
